--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,13 +1,12 @@
 ###CHANGELOG###
 --v0.4--
 * Added playlist creation and edition capibilities. The playlists creted with v4f can have files from both internal memory and µSD card. Only tested in MSC.
+* Added image preview in image conversion
 * Some UI redesign.
 --v0.3--
 * Now it makes .thm thumbnails of videos while converting (which adds a dependency on ffmpeg)
 * Bugfix: working directory permissions, fix adapted from the one supplied by srtuct in the sansa forums. Only affects the .deb package (and converted packages).
-
 * Updated .deb depencies in order to make it installable with the relatively new "wine-unstable" sid package.
-
 * Some little changes in unicode string handling, hoping they would solve some problems, but without any effect so far.
 * This version won't load settings from previous versions.
 --v0.2.1--
