--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,9 @@
 ###CHANGELOG###
+--0.4.1--
+* Bugfix: Now unicode paths work on all platforms!
+* Bugfix: Video thumbnails are now generatod for files with whitespace in its name
+* Bugfix: Strange selection behaviour in playlist mode
+* Bugfix: Now it displays thumbnails correctly
 --v0.4--
 * Added playlist creation and edition capibilities. The playlists creted with v4f can have files from both internal memory and µSD card. Only tested in MSC.
 * Added image preview in image conversion
