fixed some bugs
git-svn-id: http://video4fuze.googlecode.com/svn/trunk@65 8f0b585c-89e2-11de-a519-b78fc8232508

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,9 @@
 ###CHANGELOG###
+--0.5.1--
+* Lots of bugfixes
+* UI vastly enhanced: now it supports properly resizing and full-screen
+* Fixed settings being saved only partially in .ini files
+* Added setup.py script for easier installation from source
 --0.5--
 * Fixed launch of v4f in OSX
 * UI enhancements
